--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -138,3 +138,6 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
+body
+  font-family: 'HK Grotesk Bold';
