--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -125,6 +125,17 @@ $menu-label-color: $white-ter
 
 @import "~bulma"
 
+.tile
+  min-width: fit-content;
+
+.container
+  margin-top: 70px;
+
+.has-text-primary
+  color: #098c8c !important;
+
+a.has-text-primary:hover, a.has-text-primary:focus
+  color: #076969 !important;
 
 // responsiveness
 +tablet-only
