switch up nav to work on blog pages

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -152,3 +152,6 @@ a.has-text-primary:hover, a.has-text-primary:focus
 
 body
   font-family: 'HK Grotesk Bold';
+
+html
+  scroll-behavior: smooth;
